--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    For given positive integers <code>a, b</code> return the smallest integer exponents <code>[pa, pb]</code> that satisfy the <code>tolerance</code> requirement.
+    For given positive integers <code>a, b</code> return the smallest integer exponents <code>{% if is_js %}[pa, pb]{% else %}(pa, pb){% endif %}</code> that satisfy the <code>tolerance</code> requirement.
 </p>
 
 <!-- <p style="text-align: center;">
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-    <strong>Output:</strong> <span translate="repeat">{% if is_js %}Array{% else %}List{% endif %}</span> of two integers <span translate="no">({% if is_js %}number{% else %}int{% endif %})</span>. 
+    <strong>Output:</strong> <span translate="repeat">{% if is_js %}Array{% else %}Tuple{% endif %}</span> of two integers <span translate="no">({% if is_js %}number{% else %}int{% endif %})</span>. 
 </p>
 
 
