--- a/info/task_description.html
+++ b/info/task_description.html
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-    <strong>Output:</strong> <span translate="repeat">{% if is_js %}Array{% else %}Tuple{% endif %}</span> of two integers <span translate="no">({% if is_js %}number{% else %}int{% endif %})</span>. 
+    <strong>Output:</strong> <span translate="repeat">{% if is_js %}Array{% else %}Tuple{% endif %}</span> (or list) of two integers <span translate="no">({% if is_js %}number{% else %}int{% endif %})</span>. 
 </p>
 
 
