--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    For given positive integers <code>a, b</code> return the smallest integer exponents <code>{% if is_js %}[pa, pb]{% else %}(pa, pb){% endif %}</code> that satisfy the <code>tolerance</code> requirement.
+    For given positive integers <code>a, b</code> return the smallest positive integer exponents <code>{% if is_js %}[pa, pb]{% else %}(pa, pb){% endif %}</code> that satisfy the <code>tolerance</code> requirement.
 </p>
 
 <!-- <p style="text-align: center;">
