add title image

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,4 +1,5 @@
 <!-- Describe task in general -->
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
 
 <p style="text-align: justify;">
     Except when the prime factors of <code>a, b</code> already co-operate, the iron hand of the <a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a> dictates that the integer powers <code>a**pa</code> and <code>b**pb</code> can never be equal for any two positive integer exponents <code>pa</code> and <code>pb</code>. However, in the jovial spirit of <a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a>, we define two such powers to “hit” if their difference <code>abs(a**pa-b**pb)</code> multiplied by the <code>tolerance</code> is at most equal to the smaller of those powers. (This definition intentionally avoids division to keep it both fast and accurate for arbitrarily large integers.) For example, <code>tolerance=100</code> expects <code>a**pa</code> and <code>b**pb</code> to be within 1 %. 
