--- a/translations/zh-hans/info/task_description.html
+++ b/translations/zh-hans/info/task_description.html
@@ -1,4 +1,5 @@
 <!-- Describe task in general -->
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
 
 <p style="text-align: justify;">
     除非<code>a, b</code> 的质因数已经合作，否则<a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a> 的铁腕规定，对于任何两个正整数指数<code>pa</code> 和<code>pb</code> ，整数幂<code>a**pa</code> 和<code>b**pb</code> 永远不可能相等。不过，本着<a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a> 的欢快精神，如果<code>abs(a**pa-b**pb)</code> 乘以<code>tolerance</code> 的差最多等于这两个幂中较小的一个，我们就定义这两个幂为 "命中"。(这个定义有意避免了除法，以保证对任意大整数的计算既快速又准确）。例如，<code>tolerance=100</code> 希望<code>a**pa</code> 和<code>b**pb</code> 在 1 % 的范围内。 
