--- a/translations/de/info/task_description.html
+++ b/translations/de/info/task_description.html
@@ -1,5 +1,5 @@
 <!-- Describe task in general -->
-<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
+<img src="{{MEDIA_CONVERT}}title1.png " class="title_img" /> 
 
 <p style="text-align: justify;">
     Außer wenn die Primfaktoren von <code>a, b</code> bereits zusammenarbeiten, diktiert die eiserne Hand von <a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a>, dass die ganzzahligen Potenzen <code>a**pa</code> und <code>b**pb</code> für zwei beliebige positive ganzzahlige Exponenten <code>pa</code> und <code>pb</code> niemals gleich sein können. Im heiteren Geist von <a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a> definieren wir jedoch, dass zwei solche Potenzen "treffen", wenn ihre Differenz <code>abs(a**pa-b**pb)</code> multipliziert mit <code>tolerance</code> höchstens gleich der kleineren dieser Potenzen ist. (Diese Definition vermeidet absichtlich die Division, damit sie sowohl schnell als auch genau für beliebig große ganze Zahlen ist.) Zum Beispiel erwartet <code>tolerance=100</code>, dass <code>a**pa</code> und <code>b**pb</code> innerhalb von 1 % liegen. 
