--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -1,5 +1,5 @@
 <!-- Describe task in general -->
-<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
+<img src="{{MEDIA_CONVERT}}title1.png " class="title_img" /> 
 
 <p style="text-align: justify;">
     Sauf lorsque les facteurs premiers de <code>a, b</code> coopèrent déjà, la main de fer de <a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a> dicte que les puissances entières <code>a**pa</code> et <code>b**pb</code> ne peuvent jamais être égales pour deux exposants entiers positifs <code>pa</code> et <code>pb</code>. Toutefois, dans l'esprit jovial de <a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a>, nous définissons deux puissances de ce type comme étant "égales" si leur différence <code>abs(a**pa-b**pb)</code> multipliée par <code>tolerance</code> est au plus égale à la plus petite de ces puissances. (Cette définition évite intentionnellement la division pour rester à la fois rapide et précise pour les entiers arbitrairement grands) Par exemple, <code>tolerance=100</code> s'attend à ce que <code>a**pa</code> et <code>b**pb</code> soient à 1 % près. 
