--- a/translations/pl/info/task_description.html
+++ b/translations/pl/info/task_description.html
@@ -1,5 +1,5 @@
 <!-- Describe task in general -->
-<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
+<img src="{{MEDIA_CONVERT}}title1.png " class="title_img" /> 
 
 <p style="text-align: justify;">
     Z wyjątkiem sytuacji, gdy czynniki pierwsze <code>a, b</code> już współpracują, żelazna ręka <a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a> dyktuje, że potęgi całkowite <code>a**pa</code> i <code>b**pb</code> nigdy nie mogą być równe dla dowolnych dwóch dodatnich wykładników całkowitych <code>pa</code> i <code>pb</code>. Jednak w jowialnym duchu <a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a>, definiujemy dwie takie potęgi jako "trafione", jeśli ich różnica <code>abs(a**pa-b**pb)</code> pomnożona przez <code>tolerance</code> jest co najwyżej równa mniejszej z tych potęg. (Ta definicja celowo unika dzielenia, aby była zarówno szybka, jak i dokładna dla arbitralnie dużych liczb całkowitych) Na przykład, <code>tolerance=100</code> oczekuje, że <code>a**pa</code> i <code>b**pb</code> będą w granicach 1%. 
