--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -1,5 +1,5 @@
 <!-- Describe task in general -->
-<img src="{{MEDIA_CONVERT}}title.png" class="title_img" /> 
+<img src="{{MEDIA_CONVERT}}title1.png " class="title_img" /> 
 
 <p style="text-align: justify;">
     За винятком випадків, коли прості множники <code>a, b</code> вже співпрацюють, залізна рука <a target="_blank" href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_arithmetic">Fundamental Theorem of Arithmetic</a> диктує, що цілі степені <code>a**pa</code> і <code>b**pb</code> ніколи не можуть бути рівними для будь-яких двох натуральних показників <code>pa</code> і <code>pb</code>. Однак, у веселому дусі <a target="_blank" href="https://en.wiktionary.org/wiki/close_enough_for_government_work">“close enough for government work”</a>, ми визначаємо два таких степені як "збіг", якщо їх різниця <code>abs(a**pa-b**pb)</code>, помножена на <code>tolerance</code>, щонайбільше дорівнює меншому з цих степенів. (Це визначення навмисно уникає ділення, щоб воно було швидким і точним для довільно великих цілих чисел) Наприклад, <code>tolerance=100</code> очікує, що <code>a**pa</code> і <code>b**pb</code> будуть в межах 1 %. 
